tests/NormalTests/paczka1/fuzzy1/80944995.err
Error in line 4: XZmqtPIGUs A525 19,9
Error in line 18: A104 A104 60,9
Error in line 27: XZmqtPIGUs SE26 47,9
Error in line 1: R5NCCQjd6a S826 68,0
Error in line 35: gzPHnU S826 20,3
